# wscript

./: .gitignore  Cargo.toml  Cross.toml  README.md  SPEC.md  justfile
.github/workflows/: ci.yml
crates/spite-cli/: Cargo.toml
crates/spite-cli/src/: main.rs
crates/spite-script/: Cargo.toml
crates/spite-script/src/: bindings.rs  engine.rs  lib.rs  reflect.rs
crates/spite-script/src/compiler/: ast.rs  codegen.rs  ir.rs  lexer.rs  lower.rs  mod.rs  parser.rs  token.rs  tycheck.rs
crates/spite-script/src/dap/: mod.rs  server.rs
crates/spite-script/src/lsp/: diagnostics.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  semantic_tokens.rs  server.rs
crates/spite-script/src/runtime/: debug.rs  value.rs  vm.rs
crates/spite-script/tests/: integration.rs
crates/wscript/: Cargo.toml
crates/wscript-cli/: Cargo.toml
crates/wscript-cli/src/: main.rs
crates/wscript-com-test/: Cargo.toml
crates/wscript-com-test/src/: main.rs
crates/wscript-com-test/tests/com_scripts/: dictionary_basic.ws  drop_on_vm_exit.ws  missing_method.ws  release_then_use.ws
crates/wscript/src/: bindings.rs  engine.rs  lib.rs  query_db.rs
crates/wscript/src/compiler/: ast.rs  codegen.rs  ir.rs  lexer.rs  lower.rs  mod.rs  parser.rs  source_map.rs  token.rs  tycheck.rs
crates/wscript/src/dap/: mod.rs  server.rs
crates/wscript/src/lsp/: completions.rs  diagnostics.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  semantic_tokens.rs  server.rs
crates/wscript/src/runtime/: com.rs  debug.rs  mod.rs  value.rs  vm.rs
crates/wscript/tests/: integration.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  grammar.md  introduction.md
docs/src/embedding/: README.md  globals.md  host-functions.md  host-types.md
docs/src/getting-started/: README.md  cli-usage.md  editor-setup.md  installation.md  library-usage.md
docs/src/language/: README.md  arrays.md  attributes.md  closures.md  control-flow.md  enums.md  error-handling.md  functions.md  generics.md  macros.md  maps.md  pattern-matching.md  pipelines.md  primitives.md  references.md  strings.md  structs.md  traits.md  tuples.md  variables.md
docs/src/tooling/: README.md  dap.md  lsp.md
editors/vscode/: language-configuration.json  package.json  spite-script.tmLanguage.json  wscript.tmLanguage.json
example-hosted/: Cargo.toml  README.md
example-hosted/scripts/: config_processor.spite  config_processor.ws  game_logic.spite  game_logic.ws  state.spite  state.ws
example-hosted/src/: main.rs
examples/: arithmetic.ws  arrays.spite  closures.spite  conditionals.spite  consts_traits.spite  enums.ws  error_handling.spite  fib_iter.spite  fib_simple.ws  fibonacci.spite  floats.spite  for_loop.spite  hello.ws  iterators.ws  lambdas.spite  loops.ws  methods.spite  operators.spite  option_result.spite  pipeline_basic.spite  pipelines.spite  print_test.ws  simple.spite  string_methods.spite  string_methods.ws  strings.ws  structs.ws  template_strings.spite  tuples_macros.ws
