[package]
name = "spite-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A statically-typed scripting language that compiles to WebAssembly"

[lib]
name = "spite_script"

[features]
default = ["runtime"]
runtime = ["dep:wasmtime"]
lsp = ["dep:tower-lsp", "dep:tokio"]
dap = ["dep:dap", "dep:tokio"]
full = ["runtime", "lsp", "dap"]

[dependencies]
# Core (always needed — compiler)
walrus = "0.22"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3"
indexmap = "2"
rustc-hash = "2"
log = "0.4"

# Runtime (feature-gated)
wasmtime = { version = "29", optional = true }

# LSP (feature-gated)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# DAP (feature-gated)
dap = { version = "0.4.1-alpha1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
