[package]
name = "wscript-com-test"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Wine-driven integration tests for the Windows COM feature."

[[bin]]
name = "wscript-com-test"
path = "src/main.rs"

[dependencies]
wscript = { path = "../wscript", features = ["runtime", "com"] }
